Mobile spacing fix

--- a/styles.css
+++ b/styles.css
@@ -1369,7 +1369,7 @@ footer p {
 	.contact p {
 		font-size: 16px;
 		margin-bottom: 32px;
-		padding: 0 16px;
+		/* padding: 0 16px; */
 	}
 	
 	.contact-button {
